added channel name

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			            <h2>Software Developer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.youtube.com/@RishabhMishraOfficial" class="btn btn-primary py-3 px-4">Resume</a> 
+			            <p><a href="https://drive.google.com/file/d/1VdA8AUnO3lqpMCUalqH4P-HldPgvQ655/view?usp=sharing" class="btn btn-primary py-3 px-4">Resume</a> 
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/yashg25/"><span class="icon-linkedin"></span></a></li> 
 							<li class="ftco-animate"><a href="https://github.com/yashg25/"><span class="icon-github"></span></a></li> 
 							<!-- <a href="https://github.com/rishabhnmishra" class="btn btn-white btn-outline-white py-3 px-4">My works</a><!-- </p> -->
@@ -435,7 +435,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1VdA8AUnO3lqpMCUalqH4P-HldPgvQ655/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div> 
@@ -628,7 +628,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1VdA8AUnO3lqpMCUalqH4P-HldPgvQ655/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
